<resources>
  <string name="app_name">saasbase</string>
  <string name="input_money">请输入金额</string>

  <string name="oem_tag">@string/oem</string>
  <string name="oem">staff-test</string>
  <string name="etc_d_people">等%d人</string>
  <!--通用-->
  <string name="confirm">确定</string>
  <string name="reset">重置</string>
  <string name="delete">删除</string>
  <string name="dialog_sure">好，知道了!</string>

  <!--菜单相关-->
  <string name="edit">编辑</string>

  <!--提示-->
  <string name="sorry_for_no_permission_shop">抱歉，您没有该功能权限</string>
  <string name="no_access">禁止访问</string>
  <string name="no_current_page_permission">您没有当前页面的访问权限</string>

  <!--工作人员列表、教练列表-->
  <string name="su_manager">超级管理员</string>
  <string name="manager">工作人员</string>
  <string name="desperately_loading">玩儿命加载中…</string>
  <string name="name">姓名</string>
  <string name="down_trainer_app_hint">添加成功后，系统将自动短信通知教练下载［健身教练助手APP］</string>
  <string name="add_success">添加成功</string>
  <string name="alert_del_coach">是否确认删除该教练</string>
  <string name="change_su_hint">修改超级管理员的基本信息并不会变换超级管理员身份，需要变更请使用「变更超级管理员」功能</string>
  <string name="change_su">变更超级管理员</string>
  <string name="next_step">下一步</string>
  <string name="send_msg_to_sb_hint">向%s发送验证码</string>
  <string formatted="false" name="login_resend_msg">%d秒后重新发送</string>
  <string name="alert_remove_su">变更成功后，%s将自动从工作人员中移除，如有需要请重新添加</string>
  <string formatted="false" name="alert_change_su">确定将超级管理员身份从%s(%s)变更为%s(%s)？</string>
  <string name="common_cancel">取消</string>
  <string name="new_su_info">新超级管理员信息</string>
  <string name="comfirm_change">确认变更</string>
  <string name="alert_choose_one_coach">至少选择一个教练</string>
  <string name="alert_choose_one_saler">至少选择一个销售</string>

  <!--扫描二维码-->
  <string name="open_link_in_computer">请在电脑浏览器中打开以下网址</string>
  <string name="scan_url">sao.qingchengfit.cn</string>
  <string name="realy_open_next">我已经打开，下一步</string>
  <string name="err_sacn_qrcode">无法识别该二维码，请确认后再进行扫描。</string>

  <!--设置信息页面-->
  <string name="header">头像</string>
  <string name="title_fix_self_info">编辑个人资料</string>
  <string name="label_username">用户名</string>
  <string name="fix_succees">修改成功</string>
  <string name="gender">性别</string>
  <string name="hint_login_web">请登录［网页端］管理工作人员身份权限</string>

  <!--工具类-->
  <string name="unit_yuan">元</string>
  <string name="unit_time">次</string>
  <string name="unit_day">天</string>
  <string formatted="false" name="pay_money">￥%s</string>

  <!--账单-->

  <string name="other">其它</string>
  <string name="bill_head_total_amount">总金额(元)</string>
  <string name="bill_withdraw">提现中</string>
  <string name="bill_can_withdraw">可提现</string>
  <string name="bill_withdraw_already">已提现</string>
  <string name="bill_settlement">待结算</string>
  <string name="bill_back_cash">退款中</string>
  <string name="bll_back_already">已退款</string>
  <string name="bill_already_settlement">已结算</string>
  <string name="bill_withdraw_failed">提现失败</string>
  <string name="bill_cash_failed">退款失败</string>
  <string name="bill_back_cash_finish">退款完成</string>
  <string name="bill_title">账单流水纪录(POS)</string>
  <string name="bill_filter">筛选</string>
  <string formatted="false" name="bill_total_crash">提现: %s</string>
  <string formatted="false" name="bill_total_income">收入: %s</string>
  <string formatted="false" name="bill_operator">操作人: %s</string>
  <string name="bill_filter_card">会员卡购卡</string>
  <string name="bill_filter_recharge">充值</string>
  <string name="bill_filter_cashier">收银</string>
  <string name="bill_pos_no">POS机编号</string>
  <string name="bill_setting_cashier">收银员</string>
  <string name="bill_setting_gym_detail_logo">场馆Logo</string>
  <string name="bill_setting_gym_detail_name">场馆名称</string>
  <string name="bill_setting_gym_detail_no">商户编号</string>
  <string formatted="false" name="bill_detail_item">%s - 尾号(%s)</string>
  <string formatted="false" name="bill_detail_item_trade_type">%s (%s)</string>
  <string formatted="false" name="bill_count_indeed">%.2f</string>
  <string formatted="false" name="bill_count_reduce">%.2f</string>
  <string name="bill_no_data">本月无数据</string>
  <string name="bill_pay_origin_web">Web</string>
  <string name="bill_pay_origin_app">App</string>
  <string name="bill_pay_origin_pos">Pos机</string>
  <string name="bill_pay_origin_member">会员端</string>

  <string formatted="false" name="bill_detail_success">交易成功(%s)</string>

  <!--支付-->
  <string name="pay_card">银联支付</string>
  <string name="pay_wx">微信</string>
  <string name="pay_wx_scan">微信扫码</string>
  <string name="pay_ali">支付宝</string>
  <string name="pay_ali_scan">支付宝扫码</string>
  <string name="pay_wx_success">微信支付</string>
  <string name="pay_wx_scan_success">微信二维码支付</string>
  <string name="pay_ali_success">支付宝支付</string>
  <string name="pay_ali_scan_success">支付宝支付</string>
  <string name="pay_card_success">银行卡收款</string>
  <string name="pay_qq_success">QQ钱包</string>
  <string name="pay_union_success">银联支付</string>
  <string name="pay_other_success">其他支付</string>
  <string name="pay_withdraw">提现</string>
  <string name="pay_back_cash">退款</string>

  <string name="e_cardtpl_empty">找不到会员卡种类</string>
  <string name="e_member_empty">请选择绑定会员</string>
  <string name="back_cash_way_weixin">微信支付原路返回</string>
  <string name="back_cash_way_ali">支付宝原路返回</string>
  <string name="back_cash_way_qq">QQ钱包原路返回</string>
  <string formatted="false" name="back_cash_way_card">银行卡== %s (%s）</string>

  <!--交班-->
  <string formatted="false" name="exchange_staff_info">%s  (%s)</string>
  <string name="start_time">开始时间</string>
  <string name="end_time">结束时间</string>
  <string name="course_order_interval">约课间隔时间</string>

  <!-- 签到 签出-->
  <string name="sign_type_in">签到</string>
  <string name="sign_type_out">签出</string>
  <string name="sign_in_count">今日签到%d人次</string>
  <string name="sign_out_count">今日签出%d人次</string>
  <string name="sign_in_untreated_count">%d条新未处理签到,点击查看</string>
  <string name="sign_in_untreated_phone">手机 : %s</string>
  <string name="sign_in_untreated_card">会员卡 : %s</string>
  <string name="sign_in_untreated_fee">费用 : %s</string>
  <string name="sign_in_untreated_gui">更衣柜</string>
  <string name="sign_in_untreated_ka">会员卡</string>
  <string name="sign_in_untreated_choose">请选择更衣柜</string>
  <string name="sign_in_untreated_choose_card">请选择会员卡</string>
  <string name="sign_in_untreated_ignor">忽略</string>
  <string name="sign_in_untreated_confirm">确认签到</string>
  <string name="sign_out_untreated_confirm">确认签出</string>
  <string name="sign_in_untreated_class">当天预约课程(%d)</string>
  <string name="sign_out_untreated_gui">更衣柜号 : %s</string>
  <string name="sign_out_untreated_time">签到时间 : %s</string>
  <string name="sign_in_qrcode">签到二维码</string>
  <string name="sign_in_manual">手动签到</string>
  <string name="sign_in_manual_discrib">查找会员进行手动签到</string>
  <string name="sign_in_coach">教练 : %s</string>
  <string name="sign_in_room">场地 : %s</string>
  <string name="sign_in_log_in">签到时间 : %s</string>
  <string name="sign_in_log_out">签出时间 : %s</string>
  <string name="sign_in_log_opretor">操作员 : %s</string>
  <string name="sign_in_log_cancel">撤销</string>
  <string name="sign_in_notice">初次使用[签到/签出]功能,请先进行签到设置</string>
  <string name="sign_in_setting">开启通知后，会员在该场馆扫描二维码签到时\n你的手机将收到通知以便处理</string>
  <string name="sign_in_qrcode_des">出示此二维码,让会员通过微信扫一扫等工具扫码%s</string>
  <string name="sign_in_config_title">进场签到设置</string>
  <string name="sign_in_detail_title">签到详情</string>
  <string name="sign_in_log_title">签到记录</string>


  <!--评论相关-->
  <string name="activity_text_replay">回复</string>
  <string name="title_msg">消息</string>
  <string name="notification_system">系统通知</string>
  <string name="notification_meetting">学习培训</string>
  <string name="notification_checkin">签到处理</string>
  <string name="notification_comment">收到回复</string>
  <string name="notification_competition">赛事训练营</string>
  <string name="notification_job">求职招聘</string>
  <string name="notification_gym">场馆消息</string>
  <string name="all_comments_count">全部评论(%d)</string>
  <string name="sign_up_create_group">新建分组</string>
  <string name="sign_up_personal">个人</string>
  <string name="sign_up_group">分组</string>


  <!--签到-->
  <string name="qc_signin_select_card">请选择会员卡</string>
  <string name="qc_signin_cancel_confirm">确定要撤销签到么?</string>
  <string name="qc_signin_config_lable">分配更衣柜</string>
  <string name="qc_signin_config_get_locker_lable">签到时分配更衣柜</string>
  <string name="qc_signin_config_return_locker_lable">签出时自动归还更衣柜</string>
  <string name="qc_signin_config_card_lable">设置签到会员卡</string>
  <string name="qc_signin_footer">查看3小时内签到记录</string>
  <string name="sign_in_config_cost">每人每次签到费用(%s)</string>


  <string formatted="false" name="sales_sb">销售: %s</string>
  <string name="has_send">已发送</string>
  <string name="draft">草稿</string>


  <string name="t_chat_chose_friend">选择联系人</string>


  <string name="t_article_reply_list">收到回复</string>
  <string name="t_article_comment_list">全部评论</string>
  <string name="no_more_loading">已经没有更多数据</string>
  <string name="qc_chat_friend_select">已选择%d名联系人</string>

  <!--复制排期-->
  <string name="title_copy_batch_course">复制课程</string>
  <string name="title_copy_batch_to">复制到</string>
  <string name="button_copy_batch_sure">确定复制</string>

  <string name="warning_copy_batch_time_long">所选日期不能超过31天</string>
  <string name="description_copy_batch" formatted="false">即：将%s至%s期间%s的%s，复制到%s至%s</string>
  <string name="successed_copy_batch">复制排期成功</string>
</resources>

