<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:civ="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <include layout="@layout/common_simple_toolbar"/>

  <TextView
      android:id="@+id/hint"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingBottom="@dimen/little"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      android:paddingTop="@dimen/little"
      android:text="@string/change_su_hint"
      />

  <include layout="@layout/divider_grey"/>

  <RelativeLayout
      android:id="@+id/header_layout"
      android:layout_width="match_parent"
      android:layout_height="90dp"
      android:background="@color/white"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      >

    <TextView
        style="@style/QcTextStyleStandardDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/header"
        />

    <ImageView
        android:id="@+id/header_img"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_default_header"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_arrow_right"
        />
  </RelativeLayout>

  <include layout="@layout/divider_grey"/>

  <include layout="@layout/divider_grey_margin"/>

  <cn.qingchengfit.widgets.CommonInputView
      android:id="@+id/username"
      style="@style/QcCivInputStyle"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      civ:civ_lable="@string/label_username"
      />

  <RelativeLayout
      android:id="@+id/gender_layout"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:background="@color/white"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/gender"
        android:gravity="center_vertical"
        style="@style/QcTextStyleStandardDark"
        />

    <RadioGroup
        android:id="@+id/course_type_rg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:dividerPadding="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:orientation="horizontal"
        >

      <RadioButton
          android:id="@+id/gender_male"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radio_selector"
          android:checked="true"
          android:text="@string/gender_male"

          />

      <RadioButton
          android:id="@+id/gender_female"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radio_selector"
          android:text="@string/gender_female"
          />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/divider_white"
        />
  </RelativeLayout>


  <cn.qingchengfit.widgets.PhoneEditText
      android:id="@+id/phone_num"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:background="@color/white"
      android:paddingLeft="@dimen/activity_horizontal_margin"
      android:paddingRight="@dimen/activity_horizontal_margin"
      app:phone_show_icon="false"
      />

  <include layout="@layout/divider_grey_left_right"/>

  <include layout="@layout/divider_grey"/>


  <include layout="@layout/divider_grey_margin"/>

  <TextView
      android:id="@+id/change_su_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/qc_item_height"
      android:background="@drawable/bg_white_click"
      android:gravity="center"
      android:text="@string/change_su"
      android:textColor="@color/red"
      />

  <include layout="@layout/divider_grey"/>

</LinearLayout>