<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_filter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    >

  <LinearLayout
      android:id="@+id/container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <include layout="@layout/common_simple_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="120dp"
          android:background="@color/bill_head_background"
          android:orientation="horizontal"
          >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="23dp"
            >

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/bill_head_total_amount"
              style="@style/QcTextStyleSmallWarm"
              />

          <TextView
              android:id="@+id/tv_bill_total_amount"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:textSize="24dp"
              tools:text="20000.00"
              />

        </LinearLayout>

        <TextView
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="33dp"
            android:layout_marginTop="33dp"
            android:background="@color/bill_divider"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bg_rectangle_cornor_blue"
                android:drawablePadding="6dp"
                android:text="@string/bill_withdraw"
                style="@style/QcTextStyleSmallWarm"
                />
            <TextView
                android:id="@+id/tv_bill_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textColor="@color/white"
                tools:text="1000.00"
                style="@style/QcTextStyleLargeWarm"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bg_rectangle_corner_orange"
                android:drawablePadding="6dp"
                android:text="@string/bill_can_withdraw"
                style="@style/QcTextStyleSmallWarm"
                />
            <TextView
                android:id="@+id/tv_bill_can_withdraw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textColor="@color/white"
                tools:text="1000.00"
                style="@style/QcTextStyleLargeWarm"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bg_rectangle_corner_red"
                android:drawablePadding="6dp"
                android:text="@string/bill_settlement"
                style="@style/QcTextStyleSmallWarm"
                />
            <TextView
                android:id="@+id/tv_bill_settlement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:textColor="@color/white"
                tools:text="1000.00"
                style="@style/QcTextStyleLargeWarm"
                />
          </LinearLayout>

        </LinearLayout>

      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:background="@color/bill_divider"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="40dp"
          android:background="@color/bill_head_background"
          android:gravity="center_vertical"
          android:paddingLeft="15dp"
          android:paddingRight="15dp"
          >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bill_title"
            style="@style/QcTextStyleMediumWarm"
            />

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp"
            android:drawableRight="@drawable/vd_order_filter"
            android:text="@string/bill_filter"
            android:textColor="@color/white"
            />

      </LinearLayout>

      <include layout="@layout/divider_grey"/>

      <android.support.v4.widget.SwipeRefreshLayout
          xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/bill_swipe"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:background="@color/bg_grey"
          >
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_bill"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            />
      </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>
  </LinearLayout>

  <FrameLayout
      android:id="@+id/frag_bill_filter"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="end"
      android:background="#e211"
      android:fitsSystemWindows="true"
      android:orientation="vertical"
      />

</android.support.v4.widget.DrawerLayout>