<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/root"
    >

  <include layout="@layout/common_simple_toolbar"/>

  <RelativeLayout
      xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      android:id="@+id/root_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context="cn.qingchengfit.staffkit.views.QRActivity"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <View
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:background="@color/halftransparent_grey"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="200dp"
          >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/halftransparent_grey"
            />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_qr_scan"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/halftransparent_grey"
            />
      </LinearLayout>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:background="@color/halftransparent_grey"
          android:gravity="center_horizontal"
          android:paddingTop="@dimen/activity_vertical_margin"
          android:text="请在电脑打开网址sao.qingchengfit.cn\n讲二维码放入框内,即可自动扫描"
          android:textColor="@color/white"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/done"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone"
        >

      <ImageView
          android:layout_width="143dp"
          android:layout_height="185dp"
          android:layout_marginTop="100dp"
          app:srcCompat="@drawable/ic_scan_done"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="扫描成功"
          android:textSize="18sp"
          style="@style/Qc.TextCommonBlack"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:gravity="center"
          android:text="请在电脑网页中进行操作。"
          />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_next"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        >

      <ImageView
          android:layout_width="150dp"
          android:layout_height="150dp"
          app:srcCompat="@drawable/ic_complete_scan"
          />

      <TextView
          android:layout_width="250dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/open_link_in_computer"
          />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/scan_url"
          android:textColor="@color/colorPrimary"
          />

      <Button
          android:id="@+id/btn_next"
          android:layout_width="180dp"
          android:layout_height="40dp"
          android:layout_marginTop="10dp"
          android:text="@string/realy_open_next"

          />
    </LinearLayout>
  </RelativeLayout>

</LinearLayout>



